# XE

./: CMakeLists.txt  README.md
demo/: HUD010.cpp  HUD010.h  localWindow.cpp  localWindow.h  main.cpp
models/bunny/: bunny_simple.mtl
models/dragon/: dragon_simple.mtl
models/primitives/: cube.mtl  plane.mtl
old/: HUD010.cpp  HUDBase.cpp  HUDBase.h
old/static_meshes_2D/: staticMesh2D.h
old/static_meshes_2D/primitives/: quad.cpp
old/static_meshes_3D/: assimpModel.h  heightmap.h  heightmapWithFog.h  house.cpp  house.h  plainGround.cpp  snowCoveredPlainGround.cpp  snowCoveredPlainGround.h  staticMesh3D.cpp  staticMesh3D.h  staticMeshIndexed3D.h
old/static_meshes_3D/primitives/: cube.cpp  cube.h  cylinder.cpp  cylinder.h  pyramid.h  sphere.cpp
shaders/: figure3D.frag  figure3D.vert  figures.frag  ground.frag  ortho2D.frag  ortho2D.vert
shaders/common/: figure2D.frag  figure2D.vert  figure3D.frag  figure3D.vert  util_lights.glsl
src/: HUDBase.cpp  HUDBase.h  entity.cpp  entity.h  flyingCamera.cpp  flyingCamera.h  glad.c  openGLWindow.cpp  openGLWindow.h  renderable.cpp  renderable.h  sampler.cpp  sampler.h  shader.cpp  shader.h  shaderProgram.cpp  shaderProgram.h  staticGeometry.cpp  staticGeometry.h  stringUtils.h  texture.cpp  texture.h  uniform.cpp  uniform.h  vertexBufferObject.cpp  vertexBufferObject.h
src/geometry/: model.cpp  model.h
src/geometry/primitives/: cube.cpp  cube.h  quad.cpp  quad.h  triangle.cpp  triangle.h
src/geometry/static_meshes_2D/: staticMesh2D.cpp  staticMesh2D.h
src/geometry/static_meshes_2D/primitives/: quad.h
src/geometry/static_meshes_3D/: assimpModel.cpp  heightmap.cpp  heightmap.h  heightmapWithFog.cpp  house.cpp  plainGround.cpp  plainGround.h  skybox.cpp  skybox.h  snowCoveredPlainGround.cpp  staticMesh3D.h  staticMeshIndexed3D.cpp
src/geometry/static_meshes_3D/primitives/: cube.cpp  cube.h  pyramid.cpp  sphere.h  torus.cpp  torus.h
src/imgui/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_plot.cpp  imgui_plot.hpp
src/managers/: matrixManager.cpp  matrixManager.h  samplerManager.cpp  samplerManager.h  shaderManager.cpp  shaderManager.h  shaderProgramManager.cpp  shaderProgramManager.h  textureManager.cpp  textureManager.h
